PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Feb 2009, PHP 5.2.9
- Fixed bug #47322 (sscanf %d doesn't work). (Felipe)

02 Feb 2009, PHP 5.2.9RC1
- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)

- Added optional sorting type flag parameter to array_unique(). Default is
  SORT_REGULAR. (Andrei)

- Fixed a crash on extract in zip when files or directories entry names contain 
  a relative path. (Pierre)
- Fixed error conditions handling in stream_filter_append(). (Arnaud)
- Fixed zip filename property read. (Pierre)
- Fixed explode() behavior with empty string to respect negative limit. (Shire)
- Fixed security issue in imagerotate(), background colour isn't validated
  correctly with a non truecolour image. Reported by Hamid Ebadi,
  APA Laboratory (Fixes CVE-2008-5498). (Scott)
- Fixed a segfault when malformed string is passed to json_decode(). (Scott)
- Fixed bug in xml_error_string() which resulted in messages being
  off by one. (Scott)

- Fixed bug #47282 (FILTER_VALIDATE_EMAIL is marking valid email addresses
  as invalid). (Ilia)
- Fixed bug #47220 (segfault in dom_document_parser in recovery mode). (Rob)
- Fixed bug #47217 (content-type is not set properly for file uploads).
  (Ilia)
- Fixed bug #47174 (base64_decode() interprets pad char in mid string as
  terminator). (Ilia)
- Fixed bug #47165 (Possible memory corruption when passing return value by
  reference). (Dmitry)
- Fixed bug #47152 (gzseek/fseek using SEEK_END produces strange results).
  (Felipe)
- Fixed bug #47131 (SOAP Extension ignores "user_agent" ini setting). (Ilia)
- Fixed bug #47104 (Linking shared extensions fails with icc). (Jani)
- Fixed bug #47109 (Memory leak on $a->{"a"."b"} when $a is not an object).
  (Etienne, Dmitry)
- Fixed bug #47048 (Segfault with new pg_meta_data). (Felipe)