@@ -332,10 +332,13 @@ static php_stream_filter *php_bz2_filter_create(const char *filtername, zval *fi
 			}
 
 			if (tmpzval) {
-				SEPARATE_ZVAL(tmpzval);
-				convert_to_boolean_ex(tmpzval);
-				smallFootprint = Z_LVAL_PP(tmpzval);
-				zval_ptr_dtor(tmpzval);
+				zval tmp, *tmp2;
+
+				tmp = **tmpzval;
+				zval_copy_ctor(&tmp);
+				tmp2 = &tmp;
+				convert_to_boolean_ex(&tmp2);
+				smallFootprint = Z_LVAL(tmp);
 			}
 		}
 
@@ -352,26 +355,31 @@ static php_stream_filter *php_bz2_filter_create(const char *filtername, zval *fi
 			if (Z_TYPE_P(filterparams) == IS_ARRAY || Z_TYPE_P(filterparams) == IS_OBJECT) {
 				if (zend_hash_find(HASH_OF(filterparams), "blocks", sizeof("blocks"), (void**) &tmpzval) == SUCCESS) {
 					/* How much memory to allocate (1 - 9) x 100kb */
-					SEPARATE_ZVAL(tmpzval);
-					convert_to_long_ex(tmpzval);
-					if (Z_LVAL_PP(tmpzval) < 1 || Z_LVAL_PP(tmpzval) > 9) {
+					zval tmp;
+	
+					tmp = **tmpzval;
+					zval_copy_ctor(&tmp);
+					convert_to_long(&tmp);
+					if (Z_LVAL(tmp) < 1 || Z_LVAL(tmp) > 9) {
 						php_error_docref(NULL TSRMLS_CC, E_WARNING, "Invalid parameter given for number of blocks to allocate. (%ld)", Z_LVAL_PP(tmpzval));
 					} else {
-						blockSize100k = Z_LVAL_PP(tmpzval);
+						blockSize100k = Z_LVAL(tmp);
 					}
-					zval_ptr_dtor(tmpzval);
 				}
 
 				if (zend_hash_find(HASH_OF(filterparams), "work", sizeof("work"), (void**) &tmpzval) == SUCCESS) {
 					/* Work Factor (0 - 250) */
-					SEPARATE_ZVAL(tmpzval);
-					convert_to_long_ex(tmpzval);
-					if (Z_LVAL_PP(tmpzval) < 0 || Z_LVAL_PP(tmpzval) > 250) {
-						php_error_docref(NULL TSRMLS_CC, E_WARNING, "Invalid parameter given for work factor. (%ld)", Z_LVAL_PP(tmpzval));
+					zval tmp;
+	
+					tmp = **tmpzval;
+					zval_copy_ctor(&tmp);
+					convert_to_long(&tmp);
+
+					if (Z_LVAL(tmp) < 0 || Z_LVAL(tmp) > 250) {
+						php_error_docref(NULL TSRMLS_CC, E_WARNING, "Invalid parameter given for work factor. (%ld)", Z_LVAL(tmp));
 					} else {
-						workFactor = Z_LVAL_PP(tmpzval);
+						workFactor = Z_LVAL(tmp);
 					}
-					zval_ptr_dtor(tmpzval);
 				}
 			}
 		}
