@@ -2,6 +2,8 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Feb 2009, PHP 5.2.9
 - Fixed bug #47322 (sscanf %d doesn't work). (Felipe)
+- Fixed bug #46026 (bz2.decompress/zlib.inflate filter tries to decompress after
+  end of stream). (Greg)
 
 02 Feb 2009, PHP 5.2.9RC1
 - Changed __call() to be invoked on private/protected method access, similar to
